task_1/payment-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: payment-service

spec:
  replicas: 2

  selector:
    matchLabels:
      app: payment-service

  template:
    metadata:
      labels:
        app: payment-service

    spec:
      containers:
      - name: payment-service
        image: 525162799312.dkr.ecr.ap-south-1.amazonaws.com/payment-service:v1

        ports:
        - containerPort: 5000
