task_1/payment-service/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: payment-service

spec:
  selector:
    app: payment-service

  ports:
  - port: 80
    targetPort: 5000

  type: ClusterIP
