task_1/payment-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: payment-ingress

spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: payment-service

            port:
              number: 80
